testdata/repos/standalone/SourcingCheck/InvalidSlot/InvalidSlot-3.ebuild
EAPI=7
DESCRIPTION="Ebuild with invalid SLOT"
HOMEPAGE="https://github.com/pkgcore/pkgcheck"
SLOT="0/foo?"
LICENSE="BSD"
